UC-693 DnD5E: fix 'spell casting ability' text misalignment

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3710,13 +3710,11 @@ span.sheet-spellconcentration
     margin-left: 30px;
 }
 
-.charsheet.lang-it .sheet-header .sheet-part input[type="text"], .charsheet .sheet-header .sheet-part select {
-    height: 46px;
-}
-
+.charsheet.lang-it .sheet-header .sheet-part input[type="text"],
 .charsheet.lang-it .sheet-header .sheet-part span.sheet-display {
     height: 46px;
 }
+
 
 /*******************
  * CHARACTERMANCER *
